fix top overflow issue

--- a/web.css
+++ b/web.css
@@ -8,6 +8,7 @@
 
 /* Left pane styling */
 .left-pane {
+    position: sticky;
     width: 150px;
     background-color: #6e6863;
     padding: 20px;
@@ -39,7 +40,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /*justify-content: center;*/
     width: 100%;
     padding: 20px;
     box-sizing: border-box;
